# ClipForge

./: .clipforge-install.json  .gitignore  README.md  pyproject.toml  start.ps1  uninstall.ps1
clipforge/: __init__.py  __main__.py  batch.py  cli.py  config.py  deps.py  encode.py  errors.py  ffmpeg.py  models.py  naming.py  parsing.py  pipeline.py  probe.py  reframe.py  runner.py  tools.py
clipforge/assets/samples/: sample.json
clipforge/captions/: __init__.py  ass.py  grouping.py  presets.py
clipforge/download/: __init__.py  args.py  downloader.py  plan.py  progress.py
clipforge/transcribe/: __init__.py  base.py  factory.py  faster_whisper.py  mapping.py
scripts/: smoke_local.sh
server/: app.py  jobs.py  sse.py
tests/: conftest.py
tests/unit/: test_captions_ass.py  test_captions_grouping.py  test_config.py  test_download_args.py  test_download_guard.py  test_download_plan.py  test_download_progress.py  test_encode.py  test_errors.py  test_jobs_state.py  test_naming.py  test_parsing.py  test_probe.py  test_reframe.py  test_transcribe_mapping.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.module.css  App.tsx
web/src/api/: client.ts
web/src/components/: ClipList.module.css  ClipList.tsx  ConfigPanel.module.css  ConfigPanel.tsx  JsonDropPaste.module.css  JsonDropPaste.tsx  ProgressCard.module.css  ProgressCard.tsx  RunButton.module.css  RunButton.tsx
web/src/hooks/: useJobProgress.ts
web/src/lib/: format.test.ts  format.ts  grouping.test.ts  grouping.ts  progressReducer.test.ts  progressReducer.ts  validateClips.test.ts  (+1 more)
(+3 files in other folders)
