[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clipforge"
version = "0.1.0"
description = "Turn YouTube clip definitions into captioned vertical (9:16) short-form videos"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "faster-whisper>=1.1",
    "yt-dlp>=2026.6.9",
    "pydantic>=2.10",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
clipforge = "clipforge.cli:main"

[tool.setuptools.packages.find]
include = ["clipforge*"]

[tool.setuptools.package-data]
clipforge = ["assets/fonts/*.ttf", "assets/fonts/*.txt", "assets/samples/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-q"
